[tool.poetry]
name = "Tobo-Cogs"
version = "0.1.0"
description = ""
authors = ["Toby Harradine <me@tobyharradine.id.au>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.10"
"discord.py" = "*"
Red-DiscordBot = "*"
sphinx = "*"
tabulate = { version = "*", extras = [ "widechars" ] }

[tool.poetry.dev-dependencies]
black = "*"
"discord.py-stubs" = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
